# 3D-Object-Detection-with-Point-Clouds

./: .gitignore  README.md
3Dperception_ws/src/: object_detection_pipeline_cpp.cpp
3Dperception_ws/src/object_detection/: CMakeLists.txt  package.xml  pcl_parameters
3Dperception_ws/src/object_detection/cfg/: pcl_parameters.cfg
3Dperception_ws/src/object_detection/cfg/cpp/object_detection/: object_detection_pipeline_cppConfig.h
3Dperception_ws/src/object_detection/docs/: object_detection_pipeline_cppConfig-usage.dox  object_detection_pipeline_cppConfig.dox  object_detection_pipeline_cppConfig.wikidoc
3Dperception_ws/src/object_detection/include/object_detection/: 3D_box_fitter.h  object.h
3Dperception_ws/src/object_detection/launch/: object_detection.launch
3Dperception_ws/src/object_detection/msg/: DetectedObject.msg
3Dperception_ws/src/object_detection/rviz/: object_detection.rviz
3Dperception_ws/src/object_detection/src/: 3D_box_fitter.cpp  camera_to_world_point_cloud.cpp  object_detection_pipeline_cpp.cpp  object_detection_pipeline_cpp_don.cpp
3Dperception_ws/src/object_detection/src/object_detection/: object_detection_pipeline_cpp.cpp
3Dperception_ws/src/object_detection/src/object_detection/cfg/: object_detection_pipeline_cppConfig.py
3Dperception_ws/src/realsense-2.1.3/realsense2_camera/launch/: rs_camera.launch
3Dperception_ws/src/realsense/realsense2_camera/rviz/: urdf.rviz
3Dperception_ws/src/robot/: CMakeLists.txt  package.xml
3Dperception_ws/src/robot/launch/: alvarTag.launch  robot.launch  robot_alvartag_tracking.launch  robot_model.launch
3Dperception_ws/src/robot/launch/includes/: description.launch.xml
3Dperception_ws/src/robot/rviz/: model.rviz  robot_model.rviz
3Dperception_ws/src/robot/src/: detect_alvar_tag_cpp.cpp
3Dperception_ws/src/robot/urdf/: robot.urdf.xacro  robot_for_open_manipulator.urdf.xacro
3Dperception_ws/src/robot_description/urdf/: robot.gazebo.xacro  robot.urdf.xacro
